[package]
name = "embedify_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serenity = "0.12.2"
spotify-rs = "0.3.14"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.6"
